<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.proveedor.RealizarOferta">

    <TextView
            android:text="@string/pantalla_ofertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/RealizarOferta" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintVertical_bias="0.022"/>
    <View
            android:id="@+id/divider"
            android:layout_width="430dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RealizarOferta" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.027"/>
    <TextView
            android:text="@string/detalle_subasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/detalleSubasta"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/numero_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/numeroROsub"
            app:layout_constraintTop_toBottomOf="@+id/detalleSubasta" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintVertical_bias="0.028"/>
    <TextView
            android:text="7896541230"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtnumsubROsub"
            app:layout_constraintStart_toEndOf="@+id/numeroROsub" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/detalleSubasta" android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17" app:layout_constraintVertical_bias="0.016"/>
    <ImageView
            android:layout_width="187dp"
            android:layout_height="96dp" app:srcCompat="@drawable/caja_de_herramientas"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detalleSubasta" android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.063"/>
    <TextView
            android:text="@string/servicio_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/servicioROsub"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.042" app:layout_constraintVertical_bias="0.031"/>
    <TextView
            android:text="Carpitenria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtservROsub"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="12dp" app:layout_constraintStart_toEndOf="@+id/servicioROsub"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.18" app:layout_constraintVertical_bias="0.006"/>
    <TextView
            android:text="@string/fecha_ini_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fechainicioROsub"
            app:layout_constraintTop_toBottomOf="@+id/servicioROsub" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintVertical_bias="0.04"/>
    <TextView
            android:text="@string/fecha_fin_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/fechafinROsub"
            app:layout_constraintTop_toBottomOf="@+id/servicioROsub" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintVertical_bias="0.123"/>
    <TextView
            android:text="@string/numero_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/numeroROofer"
            app:layout_constraintTop_toBottomOf="@+id/DetalleOferta" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintVertical_bias="0.067"/>
    <TextView
            android:text="@string/precio_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/numeroROofer" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintVertical_bias="0.099"/>
    <TextView
            android:text="@string/descripcion_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/numeroROofer" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintVertical_bias="0.275"/>
    <TextView
            android:text="17/08/2022"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtfeciniROsub"
            app:layout_constraintStart_toEndOf="@+id/fechainicioROsub" android:layout_marginStart="28dp"
            android:layout_marginTop="17dp" app:layout_constraintTop_toBottomOf="@+id/txtservROsub"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="17/08/2022"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtfecfinROsub"
            app:layout_constraintStart_toEndOf="@+id/fechafinROsub"
            app:layout_constraintTop_toBottomOf="@+id/txtfeciniROsub"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154" app:layout_constraintVertical_bias="0.042"/>
    <TextView
            android:text="9876543210"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtnumROofer"
            app:layout_constraintStart_toEndOf="@+id/numeroROofer"
            app:layout_constraintTop_toBottomOf="@+id/txtfeciniROsub"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.232" app:layout_constraintVertical_bias="0.272"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="430dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtfecfinROsub"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.041"/>
    <TextView
            android:text="@string/detalle_oferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/DetalleOferta"
            app:layout_constraintTop_toBottomOf="@+id/divider3" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.006"/>
    <EditText
            android:layout_width="220dp"
            android:layout_height="27dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtprecioROofer"
            app:layout_constraintStart_toEndOf="@+id/textView15" app:layout_constraintTop_toBottomOf="@+id/txtnumROofer"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.405" app:layout_constraintVertical_bias="0.102"/>
    <EditText
            android:layout_width="226dp"
            android:layout_height="95dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/txtdescROofer"
            app:layout_constraintTop_toBottomOf="@+id/txtprecioROofer"
            android:layout_marginTop="20dp" app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintVertical_bias="0.016"/>
    <Button
            android:text="@string/boton_cancelar"
            android:layout_width="121dp"
            android:layout_height="41dp" android:id="@+id/btcancelarRO"
            app:layout_constraintTop_toBottomOf="@+id/txtdescROofer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintVertical_bias="0.458"/>
    <Button
            android:text="@string/boton_ofertar"
            android:layout_width="107dp"
            android:layout_height="41dp" android:id="@+id/btOfertarRO"
            app:layout_constraintTop_toBottomOf="@+id/txtdescROofer"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0.458"/>
</androidx.constraintlayout.widget.ConstraintLayout>