<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal" android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp">

                <LinearLayout
                        android:layout_width="104dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/numeroitemInisub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_form"
                            android:textSize="15sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/servicioiteminisub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/servicio_form"
                            android:textSize="15sp"/>
                    <TextView
                            android:id="@+id/fechainiiteinisub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/fecha_ini_form"
                            android:textSize="15sp"/>
                    <TextView
                            android:id="@+id/fechafininisub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/fecha_fin_form"
                            android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:text="789456"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content" android:id="@+id/txtnroiniprov"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@+id/null" android:layout_marginStart="3dp"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="95dp"/>
            <TextView
                    android:text="Carpinteria"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content" android:id="@+id/txtserviniprov"
                    android:layout_marginEnd="92dp" android:layout_marginTop="7dp"
                    android:layout_toEndOf="@+id/null" android:layout_marginStart="31dp"
                    android:layout_below="@+id/txtnroiniprov" android:layout_alignParentEnd="true"/>
            <TextView
                    android:text="07/10/2022"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content" android:id="@+id/txtfeciniprov"
                    android:layout_marginEnd="93dp" android:layout_marginTop="6dp"
                    android:layout_toEndOf="@+id/null" android:layout_marginStart="4dp"
                    android:layout_below="@+id/txtserviniprov" android:layout_alignParentEnd="true"/>
            <TextView
                    android:text="10/10/2022"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content" android:id="@+id/txtfechafininiprov"
                    android:layout_marginEnd="91dp" android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/null" android:layout_marginStart="1dp"
                    android:layout_below="@+id/txtfeciniprov" android:layout_alignParentEnd="true"/>
            <Button
                    android:text="@string/boton_ofertar"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp" android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp" android:layout_alignParentTop="true"
                    android:layout_marginTop="112dp" android:id="@+id/btofertariniprov"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="317dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/caja_de_herramientas"
                    android:layout_alignParentTop="true" android:layout_marginTop="36dp"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imgiteminisub"
                    android:layout_alignParentEnd="true" android:layout_marginEnd="13dp"
                    android:layout_toEndOf="@+id/null" android:layout_marginStart="224dp" tools:ignore="UnknownId"/>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>