<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.fragments.proveedor.ActivityOfertasRealizadas">

    <TextView
            android:text="@string/pantalla_ofertas_realizadas"
            android:layout_width="123dp"
            android:layout_height="20dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/OfertasRealizadas" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintVertical_bias="0.022"/>
    <Button
            android:text="@string/boton_aceptadas"
            android:layout_width="wrap_content"
            android:layout_height="41dp" android:id="@+id/btOferAceptadas"
            app:layout_constraintTop_toBottomOf="@+id/OfertasRealizadas" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088" app:layout_constraintVertical_bias="0.021"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>
    <Button
            android:text="@string/boton_recazadas"
            android:layout_width="wrap_content"
            android:layout_height="41dp" android:id="@+id/btOferRechazadas"
            app:layout_constraintTop_toBottomOf="@+id/OfertasRealizadas" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829" app:layout_constraintVertical_bias="0.022"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck"/>
    <View
            android:id="@+id/divider6"
            android:layout_width="430dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/OfertasRealizadas" android:layout_marginTop="76dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="398dp"
            android:layout_height="579dp"
            android:id="@+id/listaOferRealizadas"
            android:divider="@color/darkGrey"
            android:listSelector="@color/clearBlue"
            app:layout_constraintHorizontal_bias="0.515"
            tools:listitem="@layout/item_ofertas_realizadas"
            app:layout_constraintTop_toBottomOf="@+id/divider6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>