<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.proveedor.InicioProveedor">

    <TextView
            android:text="@string/pantalla_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/txtsub_res"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintVertical_bias="0.023"/>
    <Button
            android:text="@string/boton_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btbuscarini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.053"
            android:layout_marginEnd="28dp" app:layout_constraintStart_toEndOf="@+id/txtbuscariniprov"
            app:layout_constraintHorizontal_bias="0.0" tools:ignore="TextContrastCheck"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaIniProv"
            android:layout_width="389dp"
            android:layout_height="614dp"
            android:divider="@color/darkGrey"
            android:listSelector="@color/clearBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/inicio_prov_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="430dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtbuscariniprov" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.013"/>
    <EditText
            android:layout_width="257dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:text="@string/buscar_hint"
            android:ems="10"
            android:id="@+id/txtbuscariniprov"
            app:layout_constraintTop_toBottomOf="@+id/txtsub_res" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.109" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" tools:ignore="TouchTargetSizeCheck" android:autofillHints=""/>
</androidx.constraintlayout.widget.ConstraintLayout>