<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ActivitySubastaporCalificar">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="187dp"
                android:layout_marginTop="16dp">

            <LinearLayout
                    android:layout_width="121dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal" android:layout_marginTop="10dp"
                    android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                    android:layout_marginStart="0dp">

                <LinearLayout
                        android:layout_width="104dp"
                        android:layout_height="193dp"
                        android:layout_marginStart="28dp"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/numeroitemOR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/numero_form"
                            android:textSize="15sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/servicioitemOR"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/servicio_form"
                            android:textSize="15sp"/>
                    <TextView
                            android:id="@+id/fechaitemOR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/fecha_ini_form"
                            android:textSize="15sp"/>
                    <TextView
                            android:id="@+id/precioitemOR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/fecha_fin_form"
                            android:textSize="15sp"/>
                    <TextView
                            android:id="@+id/valoracionitemOR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:text="@string/valoracion_form"
                            android:textSize="15sp"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                    android:text="789456"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtnroOR"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="3dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="95dp"/>
            <TextView
                    android:text="Carpinteria"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtservOR"
                    android:layout_marginEnd="92dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="31dp"
                    android:layout_below="@+id/txtnroOR"
                    android:layout_alignParentEnd="true"/>
            <TextView
                    android:text="08/10/2022"
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtfecOR"
                    android:layout_marginEnd="93dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/txtservOR"
                    android:layout_alignParentEnd="true"/>
            <TextView
                    android:text="08/10/2022"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtfechafininiprov"
                    android:layout_marginEnd="91dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="1dp"
                    android:layout_below="@+id/txtfecOR"
                    android:layout_alignParentEnd="true"/>
            <ImageView
                    android:layout_width="24dp"
                    android:layout_height="28dp"
                    app:srcCompat="@color/design_default_color_secondary_variant"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="58dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/imgitemORestado"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="224dp"
                    tools:ignore="UnknownId"/>
            <RatingBar
                    android:layout_width="181dp"
                    android:layout_height="39dp" android:id="@+id/calificacionEstr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.59"
                    android:layout_marginTop="115dp"
                    android:layout_marginStart="132dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="30dp"/>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>